--- a/Py-14-Jun-2019.ipynb
+++ b/Py-14-Jun-2019.ipynb
@@ -26,6 +26,13 @@
    "source": []
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -328,6 +335,107 @@
     "    \n",
     "countoccurance2(\"Python Programming\",\"a\")\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Function to find the no of occurances of a sustrings\n",
+    "# \"abcabcddcba\",\"ab\"--->2\n",
+    "# \"abcabcddcbaaaa\",\"aa\"-->3\n",
+    "\n",
+    "\n",
+    "def substring(n,x):\n",
+    "    count=0\n",
+    "    le=len(x)\n",
+    "    for i in range(len(n)):\n",
+    "        if n[i:i+le] == x:\n",
+    "            count += 1\n",
+    "    return count\n",
+    "\n",
+    "substring(\"abcabcddcbaaaa\",\"aa\")        \n",
+    "        \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5, 6]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s = \"1 2 3 4 5 6\"\n",
+    "li = s.split()\n",
+    "numberlist = []\n",
+    "for i in li:\n",
+    "    numberlist.append(int(i))\n",
+    "numberlist"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "14"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n= int(input())\n",
+    "\n",
+    "def sumSquresNaturalNumbers(n):\n",
+    "    sum = 0\n",
+    "    for i in range(1,n+1):\n",
+    "        sum = sum + i ** 2\n",
+    "    return sum\n",
+    "sumSquresNaturalNumbers(n)"
    ]
   },
   {
