Adding all data Upto date

--- a/Py-21-June-2019.ipynb
+++ b/Py-21-June-2019.ipynb
@@ -303,26 +303,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'filename' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-6-96d722fc252b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     34\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mre\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msearch\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpattern\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mfiledata\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     35\u001b[0m \u001b[1;31m#addContact('PJ',9898989898,'raj1429@gmail.com')\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 36\u001b[1;33m \u001b[0mcheckContactsExisits\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Prasanna'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-6-96d722fc252b>\u001b[0m in \u001b[0;36mcheckContactsExisits\u001b[1;34m(name)\u001b[0m\n\u001b[0;32m     28\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mre\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     29\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mcheckContactsExisits\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 30\u001b[1;33m     \u001b[0mfilename\u001b[0m\u001b[1;33m==\u001b[0m \u001b[1;34m'Datafiles/contacts.txt'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     31\u001b[0m     \u001b[1;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'r'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     32\u001b[0m         \u001b[0mfiledata\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'filename' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Function to validate \n",
     "from Packages.validators import phoneNumberValidator as pnv,emailValidator as ev\n",
-    "#from Packages.validators import emailValidator as ev\n",
+    "# from Packages.validators import emailValidator as ev\n",
     "def addContact(name, phone, email):\n",
     "    # Store data as name,phone,email in the contacts files\n",
     "    \n",
@@ -332,6 +319,7 @@
     "        if pnv(phone) and ev(email):\n",
     "                \n",
     "            with open(filename,'a') as f:\n",
+    "                \n",
     "                line= name + \",\" + str(phone) + \",\" +email + '\\n'\n",
     "                f.write(line)\n",
     "                print(name,\"added to contacts\")\n",
@@ -349,27 +337,27 @@
     "\n",
     "import re\n",
     "def checkContactsExisits(name):\n",
-    "    filename== 'Datafiles/contacts.txt'\n",
+    "    filename= 'Datafiles/contacts.txt'\n",
     "    with open(filename,'r') as f:\n",
     "        filedata = f.read()\n",
     "        pattern = name+ ','\n",
     "        return re.search(pattern,filedata)\n",
-    "#addContact('PJ',9898989898,'raj1429@gmail.com')\n",
-    "checkContactsExisits('Prasanna')"
+    "addContact('PJ',9898989898,'raj1429@gmail.com')\n",
+    "#checkContactsExisits('7897897890')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "' name1,7569456282,name1@gmail.com\\nname1,7569456282,name1@gmail.com\\nname1,7569456282,name1@gmail.com\\n'"
+       "' name1,7569456282,name1@gmail.com\\nPrasannaraj,8328332266,prasannaraj@gmail.com\\nPrasanna,8523861231,prasanna@gmail.com\\nPJ,9898989898,raj1429@gmail.com\\n'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -391,6 +379,96 @@
     "        \n",
     "li=csvFileList(filename)\n",
     "listToFile(li)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "phone number:9898989898 email:raj1429@gmail.com\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Function to Search data into contacts file\n",
+    "filename = 'Datafiles/contacts.txt'\n",
+    "\n",
+    "def searchContacts(name):\n",
+    "   \n",
+    "   li=[]\n",
+    "   #count=1\n",
+    "   with open(filename, 'r') as f:\n",
+    "       for line in f:\n",
+    "           li.append(line.split(\",\"))\n",
+    "           \n",
+    "       for i in range(len(li)):\n",
+    "           if li[i][0]==name:\n",
+    "               print(\"phone number:\"+ li[i][1]+\" email:\" + li[i][2])\n",
+    "               break\n",
+    "       else:\n",
+    "           print(\"Invalid User Data\")\n",
+    "\n",
+    "searchContacts(\"PJ\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Function to  Modify data into file\n",
+    "\n",
+    "filename='Datafiles/contacts.txt'\n",
+    "def csvToList(filename):\n",
+    "    li=[]\n",
+    "    with open(filename, 'r')as f:\n",
+    "        for line in f:\n",
+    "            li.append(line.split(','))\n",
+    "    return li\n",
+    "\n",
+    "def appendToFile(filename,filedata):\n",
+    "    with open(filename,'a')as f:\n",
+    "        f.write(filedata)\n",
+    "    return\n",
+    "#appendtofile(filename,filedata)\n",
+    "\n",
+    "def listToFile(li):\n",
+    "    name = \"name1\"\n",
+    "    for i in range(0,len(li)):\n",
+    "        for j in range(0,len(li[i])):\n",
+    "            if li[i][j] == name:\n",
+    "                li[i][j] = \"name4\"\n",
+    "    wirteFile(li)\n",
+    "    \n",
+    "def wirteFile(li):\n",
+    "    with open(filename,'r+')as f:\n",
+    "        for i in range(0,len(li)):\n",
+    "            s=listToString(li[i])          \n",
+    "            f.write(s)\n",
+    "            \n",
+    "\n",
+    "def listToString(li1):\n",
+    "    s=\"\"\n",
+    "    s1=\"\"\n",
+    "    i=0\n",
+    "    for i in range(0,len(li1)-1):\n",
+    "        s1=li1[i]+','\n",
+    "        s=s+''.join(s1)\n",
+    "    s1=li1[i+1]\n",
+    "    s=s+''.join(s1)\n",
+    "    return s\n",
+    "\n",
+    "                \n",
+    "    \n",
+    "    \n",
+    "listToFile(csvToList(filename))\n"
    ]
   },
   {
